criando middleware validationUser, continuando documentação com swagger e iniciando criação de testes unitários
