# src/app/middlewares/ValidationUser.js
@@ -1,14 +1,25 @@
-import UserModel from "../model/UserModel.js";
+const database = require('../models');
 
-const ValidationUser = async (req, res, next) => {
-  const { nome, email, descricao } = req.body;
+const validationUser = async (req, res, next) => {
+  
+  const { nome_usuario, email, senha, usuario_tipo, cpf_cnpj } = req.body;
 
-  if (!nome || !email || !descricao) {
+  if (!nome_usuario || !email || !senha || !usuario_tipo || !cpf_cnpj) {
     return res.status(400).json({
       error: "Dados incompletos",
     });
   }
-  const userEncontrado = await UserModel.findOne({ email });
+
+  const userEncontrado = await database.InfoPessoais.findOne({ 
+    where: { 
+      cpf_cnpj  
+    },
+    include: {  
+      model: database.Contatos,
+      where: { email }
+    } 
+  });
+
   if (userEncontrado) {
     return res.status(400).json({
       error: "Usuário já cadastrado",
@@ -18,4 +29,4 @@ const ValidationUser = async (req, res, next) => {
   next();
 };
 
-export default ValidationUser;
+module.exports = validationUser;
