# src/app/routes/UserRoutes.js
@@ -1,5 +1,4 @@
-// import ValidationUser from '../middlewares/ValidationUser.js';
-const { validationLogin, validationToken } = require('../middlewares');
+const { validationLogin, validationToken, validationUser } = require('../middlewares');
 const passport = require('passport')
 
 const { Router } = require('express');
@@ -13,7 +12,7 @@ router
     .get(`${baseUrl}`, validationToken, UserController.listarTodosUsuarios)
     .get(`${baseUrl}/:id`, UserController.listarUsuarioPorId)
     .post(`/login`, validationLogin, passport.authenticate('local', {session: false}), UserController.login)
-    .post(`/register`, UserController.novoUsuario)
+    .post(`/register`, validationUser, UserController.novoUsuario)
     .put(`${baseUrl}/:id`, UserController.atualizarUsuario)
     .delete(`${baseUrl}/:id`, UserController.deletarUsuario)
 
